apps/dssp-targetnode-3/qa/deployment.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: dssp-targetnode-3
#   namespace: qa
#   labels:
#     app: dssp-targetnode-3
#     backstage.io/kubernetes-id: dssp-targetnode-3
#     environment: qa
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: dssp-targetnode-3
#   template:
#     metadata:
#       labels:
#         app: dssp-targetnode-3
#         backstage.io/kubernetes-id: dssp-targetnode-3
#         environment: qa
#     spec:
#       containers:
#         - name: dssp-targetnode-3
#           image: chaitanyapandeygspann/dssp-targetnode-3:1.0.4
#           ports:
#             - containerPort: 3000
#           env:
#             - name: APP_ENV
#               value: "qa"



apiVersion: apps/v1
kind: Deployment
metadata:
  name: dssp-targetnode-3
  namespace: qa
  labels:
    app: dssp-targetnode-3
    backstage.io/kubernetes-id: dssp-targetnode-3
    environment: qa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dssp-targetnode-3
  template:
    metadata:
      labels:
        app: dssp-targetnode-3
        backstage.io/kubernetes-id: dssp-targetnode-3
        environment: qa
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3000"
    spec:
      containers:
        - name: dssp-targetnode-3
          image: chaitanyapandeygspann/dssp-targetnode-3:1.0.4
          ports:
            - containerPort: 3000
          resources:
           requests:
            memory: "64Mi"
            cpu: "50m"
            ephemeral-storage: "50Mi"
          limits:
            memory: "128Mi"
            cpu: "100m"
            ephemeral-storage: "100Mi"
