apps/dssp-targetnode-3/qa/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dssp-targetnode-3
  namespace: qa
  labels:
    backstage.io/kubernetes-id: dssp-targetnode-3
    environment: qa
spec:
  selector:
    app: dssp-targetnode-3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
 


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: dssp-targetnode-3-ingress
# spec:
#   ingressClassName: gce
#   rules:
#   - host: dssp-targetnode-3.example.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: dssp-targetnode-3
#             port:
#               number: 80
